--- a/website/templates/signUp.html
+++ b/website/templates/signUp.html
@@ -1,5 +1,12 @@
 {% extends "base.html" %} {% block title %}Sign Up{% endblock %}
 
 {% block content %} 
-<h1>This is the sign up page!</h1>
+<form method="POST">
+    <h3 align="center">Sign Up</h3>
+    <div class="form-group">
+        <label for="email">Email Address</label>
+        <input type="email" class="form-control" id="email" name="email" placeholder="Enter email">
+    </div>
+
+</form>
 {% endblock %}
