--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- Below link is where I get the CSS Framework "bootstrap" classes which allows me to use special classes-->
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
@@ -30,9 +31,10 @@
       <div class="collapse navbar-collapse" id="navbar">
         <div class="navbar-nav">
           <a class="nav-item nav-link" id="home" href="/">Home</a>
-          <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>
+          <!-- I would prefer for signup page be emmbedded inside login page-->
+          <a class="nav-item nav-link" id="signUp" href="/sign-up">Sign Up</a> 
           <a class="nav-item nav-link" id="login" href="/login">Login</a>
-          <a class="nav-item nav-link" id="signUp" href="/sign-up">Sign Up</a>
+          <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>
         </div>
       </div>
     </nav>
