--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -39,6 +39,7 @@
       </div>
     </nav>
 
+    <!-- Beginning of messaging flashing code that alerts user of events-->
     {% with messages = get_flashed_messages(with_categories=true) %} {% if
     messages %} {% for category, message in messages %} {% if category ==
     'error' %}
@@ -56,6 +57,7 @@
       </button>
     </div>
     {% endif %} {% endfor %} {% endif %} {% endwith %}
+    <!-- End of messaging flashing code-->
 
     <div class="container">{% block content %} {% endblock %}</div>
     <script
