--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -26,13 +26,18 @@
         data-toggle="collapse"
         data-target="#navbar"
       >
+      <!-- Navbar link section -->
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbar">
         <div class="navbar-nav">
+          {% if user.is_authenticated %}
           <a class="nav-item nav-link" id="home" href="/">Home</a>
-          <a class="nav-item nav-link" id="login" href="/login">Login</a>
           <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>
+          {% else %}
+          <a class="nav-item nav-link" id="login" href="/login">Login</a>
+          {% endif %}
+          
         </div>
       </div>
     </nav>
